--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,12 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>2.2.3</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
